--- a/world_map.ipynb
+++ b/world_map.ipynb
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -277,6 +277,7 @@
        "      <th>iso_alpha</th>\n",
        "      <th>iso_num</th>\n",
        "      <th>lat</th>\n",
+       "      <th>lon</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -291,6 +292,7 @@
        "      <td>AFG</td>\n",
        "      <td>4</td>\n",
        "      <td>33.768006</td>\n",
+       "      <td>66.238514</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
@@ -303,6 +305,7 @@
        "      <td>ALB</td>\n",
        "      <td>8</td>\n",
        "      <td>41.000028</td>\n",
+       "      <td>19.999962</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>35</th>\n",
@@ -315,6 +318,7 @@
        "      <td>DZA</td>\n",
        "      <td>12</td>\n",
        "      <td>28.000027</td>\n",
+       "      <td>2.999983</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>47</th>\n",
@@ -327,6 +331,7 @@
        "      <td>AGO</td>\n",
        "      <td>24</td>\n",
        "      <td>-11.877577</td>\n",
+       "      <td>17.569124</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>59</th>\n",
@@ -339,6 +344,7 @@
        "      <td>ARG</td>\n",
        "      <td>32</td>\n",
        "      <td>-34.996496</td>\n",
+       "      <td>-64.967282</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -352,15 +358,15 @@
        "47       Angola    Africa  2007   42.731  12420476   4797.231267       AGO   \n",
        "59    Argentina  Americas  2007   75.320  40301927  12779.379640       ARG   \n",
        "\n",
-       "    iso_num        lat  \n",
-       "11        4  33.768006  \n",
-       "23        8  41.000028  \n",
-       "35       12  28.000027  \n",
-       "47       24 -11.877577  \n",
-       "59       32 -34.996496  "
+       "    iso_num        lat        lon  \n",
+       "11        4  33.768006  66.238514  \n",
+       "23        8  41.000028  19.999962  \n",
+       "35       12  28.000027   2.999983  \n",
+       "47       24 -11.877577  17.569124  \n",
+       "59       32 -34.996496 -64.967282  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,22 +377,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# plotly\n",
-    "fig = px.scatter_mapbox(DF,\n",
+    "fig = px.scatter_mapbox(df,\n",
     "                     lat='lat',\n",
     "                     lon='lon',\n",
-    "                     size='count',\n",
-    "                     color='case',\n",
-    "                     hover_name='customer',\n",
-    "                     #hover_data = DF[['case', 'count']],\n",
+    "                     size='pop',\n",
+    "                     color='continent',\n",
+    "                     hover_name='lifeExp'\n",
     "                     )\n",
     "fig.update_layout(mapbox_style=\"carto-positron\")\n",
-    "fig.write_html('world_map_multiple_tasks.html')"
+    "fig.write_html('world_map.html')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
